# legends-cookbook

./: README.md  legends-cookbook.toml  locale.db  pyproject.toml
bootstrap/: ingredient.json
config/: legends-cookbook.secrets.toml.template  legends-cookbook.toml.template
legends_cookbook/: bundle.py  config.py  db.py  main.py  runner.py
legends_cookbook/api/v1/: bindings.py  functions.py  languages.py  translations.py
legends_cookbook/api/v2/: __init__.py  bindings.py  functions.py  languages.py  translations.py
legends_cookbook/bot/: main.py
legends_cookbook/frontend/: main.py
legends_cookbook/frontend/components/: layout.py  login_interface.py  register_dialog.py
legends_cookbook/frontend/pages/: home.py  languages.py  recipe.py  recipes.py  translations.py
legends_cookbook/models/: __init__.py  base.py  ingredient.py  login_token.py  recipe.py  recipe_ingredient.py  recipe_review.py  user.py
legends_cookbook/repositories/: base.py  login_token.py  user.py
legends_cookbook/schemas/: login_token.py  recipe.py  user.py
legends_cookbook/services/: login_svc.py  users_svc.py  utils.py
