[project]
name = "legends-cookbook"
version = "0.1.0"
description = "Web app for managing noid blends, for legends!"
authors = [
    {name = "Mr.Licorice",email = "p3pp1n0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "dynaconf (>=3.2.10,<4.0.0)",
    "hypercorn (>=0.17.3,<0.18.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "pytz (>=2025.1,<2026.0)",
    "nicegui[highcharts] (>=2.21.1,<3.0.0)",
    "trio (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-telegram-bot[fast] (>=22.3,<23.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]

[tool.poetry]

[tool.poetry.scripts]
dev = "legends_cookbook.runner:dev"
start = "legends_cookbook.runner:main"
build = "legends_cookbook.bundle:build"
install = "legends_cookbook.bundle:install"
clean = "legends_cookbook.bundle:clean"

[tool.poetry.group.dev.dependencies]
shiv = "^1.0.8"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
